--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="Marika Salminen">
 		<meta charset="UTF-8">
-	   <link rel="stylesheet" href="tyylitiedosto.css">
+	   <link rel="stylesheet" href="/css/tyylitiedosto.css">
 	   <link rel="preconnect" href="https://fonts.gstatic.com">
 	   <link href="https://fonts.googleapis.com/css2?family=Over+the+Rainbow&display=swap" rel="stylesheet">
 	   <style>
