--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 		   h4{
 			   font-family: "Over the Rainbow", Garamond;
 		   }
+		   body{
+			   background-image: url("https://github.com/marikasal/marikasal.github.io/blob/main/media/background1.jpg");
+		   }
 	   </style>
     </head>
     <body>
